tests/fixtures/LatestTests/VariableDeclarationTests/errors/str_to_int.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:int = "hello"

